extend width of offer to 220px to avoid wrapping

--- a/style.css
+++ b/style.css
@@ -226,7 +226,7 @@ span {
   }
 
   .offer {
-    width: 200px;
+    width: 220px;
   }
 
   .review__text {
